--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-on-screen": "^2.1.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.1",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
