--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^8.2.0",
     "craco": "^0.0.3",
     "crypto-js": "^4.1.1",
+    "firebase": "^9.23.0",
     "json-server": "^0.17.3",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
+    "redux": "^4.2.1",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
