--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.1",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
