--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.23.0",
     "json-server": "^0.17.3",
     "mdb-react-ui-kit": "^6.1.0",
+    "mdb-ui-kit": "^6.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
